--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete responsive hospital website design</title>
+    <title>complete responsive hospital website design </title>
 
-    <!-- font awesome cdn link-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    <!--Starts Here-->
-
-    <header class="header">
-
-    <a href="#" class="logo"> <i class= "fas fa-heartbeat"></i> medcare.</a>
     
+<!-- header section starts  -->
+
+<header class="header">
+
+    <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> medcare. </a>
+
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#services">services</a>
@@ -33,20 +35,25 @@
 
 </header>
 
-<!--header section ends -->
+<!-- header section ends -->
 
-<!-- home section starts-->
+<!-- home section starts  -->
 
 <section class="home" id="home">
+
     <div class="image">
         <img src="image/home-img.svg" alt="">
-        </div>
+    </div>
+
     <div class="content">
         <h3>stay safe, stay healthy</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore itaque eligendi fugit ducimus culpa provident dicta tenetur fugiat praesentium beatae dignissimos odio nemo pariatur, quas optio voluptatum odit doloribus quidem.</p>
-        <a href="#" class="btn"> contact us <span class="fas fa-hevron-right"></span> </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sed autem vero? Magnam, est laboriosam!</p>
+        <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
+    </div>
 
-        !-- home section ends -->
+</section>
+
+<!-- home section ends -->
 
 <!-- icons section starts  -->
 
@@ -384,7 +391,7 @@
 
 </section>
 <!-- blogs section ends -->
-</section>
+
 
     <script src="/javascript/script.js"></script>
 </body>
